base.less: Invisible characters are no longer white

--- a/stylesheets/base.less
+++ b/stylesheets/base.less
@@ -69,6 +69,8 @@
                     background: rgba(0, 0, 0, .3); }
             }
 
+                .invisible-character { color: @color-brown_dark; }
+
     // -------------------------------------
     //  Source code
     // -------------------------------------
